# AgentShield

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PROJECT-OVERVIEW.md  QUICKSTART.md  README.md  build.sh  design.md  development-progress.md  package-lock.json  多终端协作规范.md  并行开发计划.md
.cargo/: config.toml
.github/workflows/: build-agent.yml
agent-runtime/: Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.build  Dockerfile.minimal  Dockerfile.simple  Dockerfile.tracka-test  agent-runtime.service  build-linux.sh  deploy-vm.sh  entrypoint.sh  test-tracka.sh
agent-runtime/src/: client.rs  config.rs  event_buffer.rs  event_upload.rs  heartbeat.rs  lib.rs  main.rs  policy_cache.rs  probe_event_conv.rs  probe_manager.rs  supervisor.rs
agent-runtime/src/checkpoint/: journal.rs  manifest.rs  mod.rs  recovery.rs  workspace.rs
agent-runtime/tests/: client_test.rs  event_buffer_test.rs  integration_test.rs  probe_event_conv_test.rs  supervisor_test.rs  test_checkpoint_rollback.rs
bridge/: .env.example  Dockerfile  langtrace_bridge.py  run.sh
deployments/: docker-compose.yml
ebpf-probes/: build-ebpf.sh
ebpf-probes/agentshield-ebpf/: Cargo.toml
ebpf-probes/agentshield-ebpf-common/: Cargo.toml
ebpf-probes/agentshield-ebpf-common/src/: lib.rs
ebpf-probes/agentshield-ebpf/src/: main.rs
ebpf-probes/agentshield-loader/: Cargo.toml
ebpf-probes/agentshield-loader/src/: main.rs
ebpf-probes/libbpf-c/: Makefile
error-handler/: go.mod
error-handler/cmd/worker/: main.go
error-handler/internal/: executor.go  subscriber.go
error-handler/internal/workflow/: aggregator.go
gateway/: go.mod
gateway/cmd/gateway/: main.go
gateway/envoy/: envoy.yaml
gateway/internal/: auth.go  ratelimit.go  relay.go
ignore/: Token 算力配额管理.md  stream-1-go-backend.md  stream-2-parallel-plan.md  stream-2-rust-ebpf.md  stream-2a-sockaddr.md  stream-2b-supervisor-build.md  stream-2c-tests-cleanup.md  stream-3-python-api.md  stream-4-frontend-ui.md  stream-coordination.md  影子智能体检测.md  断点续跑快照机制.md  自动红队.md
kernel-hardening/selinux/: agentshield.te
management-server/: Dockerfile  go.mod  go.sum  serve-web.py
management-server/cmd/server/: main.go
management-server/cmd/sqlite-test/: main.go
management-server/internal/api/: router.go  router_test.go  websocket.go
management-server/internal/cache/: cache.go  cache_test.go  redis.go  redis_integration_test.go  redis_test.go
management-server/internal/config/: config.go
management-server/internal/grpc/: server.go
management-server/internal/models/: models.go
management-server/internal/policy/: distributor.go  opa_client.go  opa_client_test.go
management-server/internal/risk/: cfg_builder.go  engine.go  engine_test.go  ml_scorer.go  rules.go  rules_test.go
management-server/internal/store/: memory.go  memory_test.go  sqlite.go  sqlite_test.go  store.go
management-server/internal/store/migrations/: 001_init.sql  (+3 more)
management-server/internal/token_quota/: handler.go  handler_test.go  manager.go  manager_test.go
management-server/web/: index.html  package-lock.json  package.json  vite.config.ts
management-server/web/src/: App.tsx  main.tsx
ml-pipeline/: Dockerfile  README.md  pyproject.toml
ml-pipeline/scripts/: download_datasets.py  register_policy.py  train_gnn.py
ml-pipeline/src/agentshield_ml/: __init__.py
ml-pipeline/src/agentshield_ml/api/: main.py
ml-pipeline/src/agentshield_ml/cfg/: __init__.py  batch_builder.py  builder.py  resource_classifier.py
ml-pipeline/src/agentshield_ml/data/: __init__.py  datasets.py  preprocess.py
ml-pipeline/src/agentshield_ml/embedding/: __init__.py  config.py  encoder.py  feature_extractor.py  trainer.py
ml-pipeline/src/agentshield_ml/gnn/: __init__.py  dataloader.py  inference.py  model.py  svdd_trainer.py
ml-pipeline/src/agentshield_ml/policy/: __init__.py  exporter.py  registry.py
ml-pipeline/tests/: test_cfg_builder.py  test_datasets.py  test_encoder.py  test_preprocess.py
observability/schemas/: clickhouse_spans.sql
sdk/python/: agentshield_tracer.py
security-policy/: opa-config.yaml
security-policy/cfg/: graph_schema.cypher
security-policy/policies/agentshield/: approval.rego  audit.rego  audit_test.rego  authz.rego  common.rego
shared/: buf.gen.yaml  buf.yaml  go.mod
shared/pkg/middleware/: logging.go
shared/pkg/retry/: retry.go
(+26 files in other folders)
