[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "员工侧 Agent 运行时：探针生命周期、策略缓存、与管控平面对接"

[[bin]]
name = "agent-runtime"
path = "src/main.rs"

[features]
default = []
checkpoint = ["rmp-serde", "blake3", "serde_bytes", "dep:inotify"]

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
aya = { workspace = true }
agentshield-ebpf-common = { path = "../ebpf-probes/agentshield-ebpf-common" }
bytes = "1"
num_cpus = "1"
rmp-serde = { version = "1", optional = true }
blake3 = { version = "1", optional = true }
serde_bytes = { version = "0.11", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.11", optional = true }

[dev-dependencies]
mockito = { version = "1", default-features = false }
